--- a/gym_application/pubspec.yaml
+++ b/gym_application/pubspec.yaml
@@ -11,6 +11,9 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.8
+  firebase_core: ^3.15.0
+  firebase_auth: ^5.6.1
+  cloud_firestore: ^5.6.10
 
 dev_dependencies:
   flutter_test:
